# pico-console

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  handlers.cpp  main.cpp  msc_disk.c  shell_task.cpp
src/commands/: CMakeLists.txt  board_help.cpp  commands.h  examples.cpp  i2c_scan.cpp  pico_clocks.cpp
src/config/: FreeRTOSConfig.h
src/console/: CMakeLists.txt  Console.cpp  Console.h  Packet.cpp  Packet.h  colors.h  console_task.cpp
src/console/commands/: benchmark.cpp  board_help.cpp  commands.h  examples.cpp  i2c_scan.cpp
src/shell/: CMakeLists.txt  Console.cpp  Packet.cpp
src/shell/include/shell/: Console.h  Packet.h
src/usb/: tusb_config.h  usb_descriptors.c  usb_itf.h  usb_task.cpp
